changed hard px values to rem to fix mobile issues, also set button min width to 0 so it they didnt overflow

--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
+html
+{
+    font-size: 1.4vh;
+}
+
+
 .calculator{
     display: flex;
     flex-wrap: wrap;
-    max-width: 400px;
-    min-width: 400px;
-    min-height: 640px;
-    max-height: 640px;
+    max-width: 25rem;
+    min-width: 25rem;
+    min-height: 40rem;
+    max-height: 40rem;
     justify-content: center;
     align-items: center;
-    gap:30px;
-    padding:25px;
-    border-radius: 25px;
+    gap:1.875rem;
+    padding:1.5625rem;
+    border-radius: 1.5625rem;
     background-image: linear-gradient(to bottom right, rgb(27, 27, 27), rgb(46, 46, 46));
 }
 
 button{
     border-radius: 100% ;
-    width: 75px;
-    height: 75px;
-    font-size: 30px;
+    width: 4.6875rem;
+    min-width: 0;
+    height: 4.6875rem;
+    font-size: 1.675rem;
     background-color: black;
     color: white;
-    border: solid rgb(100, 100, 100);
+    padding:0px;
+    border:0px;
 }
 
 .screen{
@@ -32,32 +40,32 @@ button{
 
 .display{
     margin-left: auto;
-    padding-top: 40px;
-    font-size: 35px;
+    padding-top: 1.1428571428571428em;
+    font-size: 2.1875rem;
     text-align:right;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-right: 15px;
+    margin-right: 0.9375rem;
     
 }
 
 .displayTwo{
     font-style: italic;
-    font-size: 25px;
-    margin-left: 5px;
-    height:30px;
-    padding-top: 5px;
-    padding-left: 5px;
+    font-size: 1.5625rem;
+    margin-left: 0.3125rem;
+    height: 1.875rem;
+    padding-top: 0.3125rem;
+    padding-left: 0.3125rem;
 }
 
 .acDel{
  display: flex;
  width: 100%;
  justify-content: flex-end;
- gap:30px;
- padding-right: 5px;
+ gap:1.875rem;
+ padding-right: 0.3125rem;
  text-align: start;
- margin-bottom: -30px;
+ margin-bottom: -1.875rem;
 }
  .style-script-regular {
   font-family: "Style Script", cursive;
@@ -66,12 +74,12 @@ button{
 }
 p{
     margin-right: auto;
-    margin-left: 30px;
+    margin-left: 1.875rem;
     color: white;
     font-weight: bolder;
     font-style: italic;
-    height:40px;
-    font-size: 30px;
+    height:2.4375rem;
+    font-size: 1.875rem;
     font-family: "Style Script",cursive;
 }
 
@@ -80,7 +88,8 @@ p{
     justify-content: center;
     align-items: center;
     max-height: 100vh;
-    min-width: 100vh;
+    max-width: 100vw;
+    min-width: 100vw;
     min-height: 100vh;
     
 }
